2007-04-23  Patti Hoa  <patti@apple.com>
        
        <rdar://problem/4938364> Attachment button has different string length between attributeStringForRange and stringForRange
        <rdar://problem/4939536> AXLengthForTextMarkerRange returns zero length for the range of an attachment
        
        Reviewed by Darin.

        * bridge/mac/WebCoreAXObject.mm:
        (nsStringForReplacedNode):
        Added helper routine to check if the replaced node should be exposed as an attachment character in string representation.
        Added an additional check to make sure that text node is not considered a replaced node.
        Removed helper routine AXAttributedStringAppendReplaced since half of the functions are now taken care by nsStringForReplacedNode.
        The other half is directly used in the doAXAttributedStringForTextMarkerRange method.
        (-[WebCoreAXObject doAXStringForTextMarkerRange:]):
        (-[WebCoreAXObject doAXAttributedStringForTextMarkerRange:]):
        Both string and AttrbributedString methods will now utilize the helper routine nsStringForReplacedNode to return replacement
        characters for range occupied by attachment.
        
2007-04-23  Adele Peterson  <adele@apple.com>

        Reviewed by Oliver.

        Fix for <rdar://problem/4887426> Set a reasonable maximum number of recent searches for search menu

        * html/HTMLInputElement.cpp: (WebCore::HTMLInputElement::parseMappedAttribute):
        Enforce a maximum of 256 saved results for the search field.

2007-04-23  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt & Adam.

        Fix for <rdar://problem/4807799> REGRESSION: calling select() in onSearch handler doesn't work if you hit enter to trigger the event
        Fix for <rdar://problem/5153970> onChange doesn't fire when focusing a popup, using type-ahead to select, and leaving
